@@ -1,7 +1,6 @@
 import java.io.*;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.time.Instant;
 
 public class Main {
     static void main(String[] args) {
@@ -9,13 +8,10 @@ public class Main {
         try {
             ServerSocket serverSocket = new ServerSocket(port);
             serverSocket.setReuseAddress(true);
-
-
             while (true) {
                 Socket finalSocket = serverSocket.accept();
                 Redis redis = new Redis(finalSocket);
-                Instant instant = Instant.now();
-                new Thread(() -> redis.handleRequest()).start();
+                Thread.ofVirtual().start(redis::handleRequest);
             }
         } catch (IOException ignored) {
             System.exit(-1);
